syntax = "proto3";

import "event_stream.proto";
import "trigger.proto";
import "unit.proto";
import "world.proto";

package dcs;

service Mission {
  // https://wiki.hoggitworld.com/view/DCS_func_outText
  rpc OutText(OutTextRequest) returns (OutTextResponse) {}

  // https://wiki.hoggitworld.com/view/DCS_func_getUserFlag
  rpc GetUserFlag(GetUserFlagRequest) returns (GetUserFlagResponse) {}

  // https://wiki.hoggitworld.com/view/DCS_func_setUserFlag
  rpc SetUserFlag(SetUserFlagRequest) returns (SetUserFlagResponse) {}

  // https://wiki.hoggitworld.com/view/DCS_func_getRadar
  rpc GetRadar(GetRadarRequest) returns (GetRadarResponse) {}

  // https://wiki.hoggitworld.com/view/DCS_func_getAirbases
  rpc GetAirbases(GetAirbasesRequest) returns (GetAirbasesResponse) {}

  rpc StreamEvents(StreamEventsRequest) returns (stream Event) {}
}